--- a/lefthook.yml
+++ b/lefthook.yml
@@ -5,10 +5,12 @@ pre-commit:
       glob: "*.{js,ts,jsx,tsx}"
       run: npx eslint {staged_files}
     types:
+      skip: true
       glob: "*.{js,ts, jsx, tsx}"
-      run: npx tsc
+      run: npx tsc --project tsconfig.json
 commit-msg:
   parallel: true
   commands:
     commitlint:
+      skip: true
       run: npx commitlint --edit
