chore: add uniffi-bindgen-react-native dependency
- Updated package.json to include uniffi-bindgen-react-native version 0.29.3-1.
- Updated yarn.lock to reflect the new dependency and its metadata.

--- a/package.json
+++ b/package.json
@@ -160,5 +160,8 @@
     "languages": "kotlin-objc",
     "type": "turbo-module",
     "version": "0.54.5"
+  },
+  "dependencies": {
+    "uniffi-bindgen-react-native": "^0.29.3-1"
   }
 }
