--- a/ubrn.config.yaml
+++ b/ubrn.config.yaml
@@ -1,5 +1,9 @@
 ---
+# rust:
+#   repo: https://github.com/jhugman/uniffi-starter.git
+#   branch: jhugman/bump-uniffi-to-0.29
+#   manifestPath: rust/foobar/Cargo.toml
+
 rust:
-  repo: https://github.com/jhugman/uniffi-starter.git
-  branch: jhugman/bump-uniffi-to-0.29
-  manifestPath: rust/foobar/Cargo.toml
+  directory: /Users/zhengyawen/Documents/GitHub/mopro-example-app
+  manifestPath: Cargo.toml
