--- a/MyTestLibraryFramework.xcframework/Info.plist
+++ b/MyTestLibraryFramework.xcframework/Info.plist
@@ -6,11 +6,11 @@
 	<array>
 		<dict>
 			<key>BinaryPath</key>
-			<string>libfoobar.a</string>
+			<string>libmopro_example_app.a</string>
 			<key>LibraryIdentifier</key>
 			<string>ios-arm64</string>
 			<key>LibraryPath</key>
-			<string>libfoobar.a</string>
+			<string>libmopro_example_app.a</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>arm64</string>
@@ -20,11 +20,11 @@
 		</dict>
 		<dict>
 			<key>BinaryPath</key>
-			<string>libfoobar.a</string>
+			<string>libmopro_example_app.a</string>
 			<key>LibraryIdentifier</key>
 			<string>ios-arm64-simulator</string>
 			<key>LibraryPath</key>
-			<string>libfoobar.a</string>
+			<string>libmopro_example_app.a</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>arm64</string>
